Fixed the linkedin Log

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ body, html {
           <h3>Ronny N. Ismael</h3>
           <p class="w3-opacity">B.S. Computer Engineer</p>
           <p>Class of 2024</p>
-          <p><a href="https://www.linkedin.com/in/ronnyismael" class="w3-button w3-light-grey w3-block"><i class="fa fa-linkedin"></i></a></p>
+          <p><a href="https://www.linkedin.com/in/ronnyismael" class="w3-button w3-light-grey w3-block"><i class="fa-brands fa-linkedin"></i></a></p>
         </div>
       </div>
     </div>
@@ -239,7 +239,7 @@ body, html {
           <h3>Cary Zheng</h3>
           <p class="w3-opacity">B.S. Computer Engineer</p>
           <p>Class of 2024</p>
-          <p><a href="https://www.linkedin.com/in/cary-zheng/" class="w3-button w3-light-grey w3-block"><i class="fa fa-linkedin"></i></a></p>
+          <p><a href="https://www.linkedin.com/in/cary-zheng/" class="w3-button w3-light-grey w3-block"><i class="fa-brands fa-linkedin"></i></a></p>
         </div>
       </div>
     </div>
@@ -251,7 +251,7 @@ body, html {
           <h3>Michael Zabaneh</h3>
           <p class="w3-opacity">B.S. Computer Engineer</p>
           <p>Class of 2024</p>
-          <p><a href="https://www.linkedin.com/in/michaelzabaneh/" class="w3-button w3-light-grey w3-block"><i class="fa fa-linkedin"></i></a></p>
+          <p><a href="https://www.linkedin.com/in/michaelzabaneh/" class="w3-button w3-light-grey w3-block"><i class="fa-brands fa-linkedin"></i></a></p>
         </div>
       </div>
     </div>
@@ -263,7 +263,7 @@ body, html {
           <h3>Mohammad Zaza</h3>
           <p class="w3-opacity">B.S. Software Engineer</p>
           <p>Class of 2024</p>
-          <p><a href="https://www.linkedin.com/in/mhzaza/" class="w3-button w3-light-grey w3-block"><i class="fa fa-linkedin"></i></a></p>
+          <p><a href="https://www.linkedin.com/in/mhzaza/" class="w3-button w3-light-grey w3-block"><i class="fa-brands fa-linkedin"></i></a></p>
         </div>
       </div>
     </div>
